dashboard changes fix name alignment

--- a/MobileApp/www/css/style.css
+++ b/MobileApp/www/css/style.css
@@ -83,6 +83,7 @@ button.siteBtn
   height: 60px !important;
   border-radius: 5px !important;
   padding: 5px 10px !important;
+  margin: 0 8px;
 }
 .sidebar .nav li.active>a, .sidebar .nav li.active>a i
 {
@@ -92,10 +93,13 @@ button.siteBtn
 {
   background: #fff;
   padding: 10px 0;
+      /* min-height: 120px; */
+      box-shadow: 0 1px 1px 1px #CCD;
 }
 .EmpCon
 {
   padding: 10px 0;
+  background: #ffa50024;
 }
 .hariz-scroll-con
 {
@@ -354,7 +358,11 @@ table tr
 }
 .Nametxt
 {
-  padding: 0 10px;
+  text-align: center;
+      padding: 0;
+      width: 65px;
+      font-size: 10px;
+      height: 65px;
 }
 .red
 {
@@ -428,6 +436,7 @@ table tr
   height: 40px;
   border-radius:50%;
   background-color: #000000;
+  margin: 0 auto;
 }
 .emp-round p
 {
@@ -436,6 +445,7 @@ table tr
   text-align: center !important;
   vertical-align: middle !important;
   line-height: 38px !important;
+      font-size: 14px;
 }
 .emp-round-active
 {
@@ -719,6 +729,11 @@ a:hover, a:focus
 .border-btm
 {
   border-bottom: 1px solid #eeeeee;
+}
+p.titleTxt
+{
+  font-weight:600;
+  padding:8px 0;
 }
 .padding-top5
 {
